--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" >
     <title>css</title>
-    <link rel="stylesheet" href="css/frist.css"
+    <link rel="stylesheet" href="frist.css"
   </head>
   <body>
    <p> سازعجك على الدوام بلا كلل او ملل يا ممتلكاتى زهرة اضغر من الالكترون ، تجربة رفع ناجحة </p>
